force-app/main/default/objects/BenefitSession.object
<CustomObject>
    <fields>
        <fullName>BenefitID__c</fullName>
        <description>Accelerator: Benefit Scheduler - Used to map the Session information to Lightning Scheduler Shifts</description>
        <formula>BenefitSchedule.BenefitId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BenefitID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Work_Type__c</fullName>
        <formula>BenefitSchedule.Benefit.Work_Type__c</formula>
        <label>Benefit Work Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Benefit Scheduler Accelerator: Used to connect Scheduler Shifts to the Benefit Session for tracking purposes.</description>
        <label>Shift</label>
        <referenceTo>Shift</referenceTo>
        <relationshipLabel>Benefit Sessions</relationshipLabel>
        <relationshipName>Benefit_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>